tests/fixtures/invalid/list_float.py
# Cannot call list() with Float
x = list(1.0)
